--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,11 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="action_notification">Notification</string>
+    <string name="nav_name">Cognitive Clouds</string>
+    <string name="action_sub_title">Bangalore</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Fragment One</string>
+    <string name="menu_gallery">Fragment Two</string>
+    <string name="menu_slideshow">Fragment Three</string>
 </resources>
