--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <string name="button">click button</string>
     <string name="dialogTitle">Delete File</string>
     <string name="dialogMessage">Deleting file may be harm your system</string>
+    <string name="title_activity_sign_in">SignInActivity</string>
+    <string name="prompt_email">UserName</string>
+    <string name="prompt_password">Password</string>
+    <string name="prompt_confirm_password">Confirm Password</string>
+    <string name="action_sign_in">Sign Up</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_recycler">Recycler Activity</string>
+    <string name="title_ui_widgets">UI Components</string>
 </resources>
