--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="prompt_password">Password</string>
     <string name="prompt_confirm_password">Confirm Password</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="maps">Maps</string>
 
     <string name="menu_home">Home Fragment</string>
     <string name="menu_gallery">Gallery Fragment</string>
@@ -37,4 +38,5 @@
     <string name="title_list_view">List View Activity</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
